tests/baselines/reference/unusedParametersWithUnderscore.errors.txt
unusedParametersWithUnderscore.ts(1,12): error TS6133: 'a' is declared but its value is never read.
unusedParametersWithUnderscore.ts(1,19): error TS6133: 'c' is declared but its value is never read.
unusedParametersWithUnderscore.ts(1,27): error TS6133: 'd' is declared but its value is never read.
unusedParametersWithUnderscore.ts(1,29): error TS6133: 'e___' is declared but its value is never read.
unusedParametersWithUnderscore.ts(9,14): error TS6198: All destructured elements are unused.
unusedParametersWithUnderscore.ts(15,16): error TS6133: 'arg' is declared but its value is never read.
unusedParametersWithUnderscore.ts(21,13): error TS6133: 'arg' is declared but its value is never read.


==== unusedParametersWithUnderscore.ts (7 errors) ====
    function f(a, _b, c, ___, d,e___, _f) {
               ~
!!! error TS6133: 'a' is declared but its value is never read.
                      ~
!!! error TS6133: 'c' is declared but its value is never read.
                              ~
!!! error TS6133: 'd' is declared but its value is never read.
                                ~~~~
!!! error TS6133: 'e___' is declared but its value is never read.
    }
    
    // ok because of underscore prefix
    function f2({_a, __b}) {
    }
    
    // error
    function f2b({ a, b }) {
                 ~~~~~~~~
!!! error TS6198: All destructured elements are unused.
    }
    
    function f3([_a, ,__b]) {
    }
    
    function f4(...arg) {
                   ~~~
!!! error TS6133: 'arg' is declared but its value is never read.
    }
    
    function f5(..._arg) {
    }
    
    function f6(arg?, _arg?) {
                ~~~
!!! error TS6133: 'arg' is declared but its value is never read.
    }
    
    var f7 = _ => undefined;
    
    var f8 = function (_) { };